# Stereochem

./: .copier-answers.yml  LICENSE  README.md  StereoChem.yml  pyproject.toml  tox.ini
docs/source/: conf.py
notebooks/: README.md  project_report.ipynb
src/stereochem/: __init__.py  compare_drawn_with_set.py  example_module.py  example_module_optimisé.py  example_module_score.py  functions.py  generate_isomers.py  helper_functions.py  new_example_module.py  optimized.py  stereochem_project.py  test.py
test/: test_example_module.py  test_generate_isomers.py  test_update_input_molecule.py
tests/: test_example_module.py
