[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StereoChem"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
description = "This package enables the identification of  stereoisomers for a given molecule."
dependencies = [ "rdkit", "streamlit", "streamlit_ketcher", "pubchempy"
]
authors = [
    {name = "Mridhula", email = "mridhula.jayasankar@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/mridhula28/StereoChem"
tracker = "https://github.com/mridhula28/StereoChem/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/stereochem/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
